cks/training/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: nptest
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 4 <NGINX pod cluster IP address>; sleep 5; done']
