cks/training/default-deny-all-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: default-deny-all
  namespace: nptest
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
