cks/training/egress-np-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: client-egress
  namespace: nptest
spec: 
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress 
  egress:
  - to:
    # Namespace with label "project: test" also pods with label "app: client"
    - namespaceSelector: 
        matchLabels:
          project: test 
      podSelector:
        matchLabels:
          app: client
    ports:
    - protocol: TCP 
      port: 80
