cks/training/network-policy-pod-selector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-np
spec: 
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: test 
    ports:
    - protocol: TCP 
      port: 80
